--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       rel="stylesheet"
       href="css/style.css"
     />
+    <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
     <script
       src="js/script.js"
       defer
